--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -376,10 +376,26 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 (नान्द्यन्ते)
 
-सूत्रधारः - आदिष्टो ऽस्मि निखिल-सुरासुर-कोटीर+++(=किरीट)+++-कोटि-मणि-किरण[^5][^6] 'निकरनीराजितपादपीठस्य[^7] शरणागतपरित्राणसप्ततन्तुदीक्षितस्य सरसी-  
-रुहवासिनीसहचरितधर्मणः संसरणदवदहनतापनिर्वापण 'महाबलाहकस्य[^8] सर्वेश्वरस्य भगवतः श्रीरङ्गवृषगिरिसत्यव्रतयदुगिरिपृरुषोत्तमपाण्डुरङ्गप्रभृतिषु दिव्याभिव्यक्तिदेशेषु यथाभिमतयात्रोत्सव सेवाहेवाकविहितगतागतचटुल'[^9] चरणनलिन धूलीपटलपवित्रितक्ष्मातलैः, यदृच्छया मरुद्वृधान्तरीपमध्यमध्यासीनैः,[^10] शेषशेषाशनगरुडनिर्विशेषैः,  
-अशेषजनसंभावनीयैः, असंभवदवद्यगन्धैः, अभिजनविद्या 'समुचित-[^11] सदाचारशीलशालिभिः, अनादिमायामहावर्तबम्भ्रम्यमाणबाह्य'[^12] कथकरम्भावनमथनगन्धसिन्धुरैः, अधिजिगमिषितमुक्तिघण्टापथैः,  
-X१६
+सूत्रधारः - आदिष्टो ऽस्मि  
+निखिल-सुरासुर-  
+कोटीर+++(=किरीट)+++-कोटि-मणि-किरण[^5][^6]-निकर-  
+नीराजित-पाद-पीठस्य[^7]  
+शरणागत-परित्राण--सप्त-तन्तु+++(=यज्ञ)+++--दीक्षितस्य  
+सरसी-रुह-वासिनी-सहचरित-धर्मणः  
+संसरण-दव-दहन-ताप-निर्वापण-महाबलाहकस्य[^8]  
+सर्वेश्वरस्य भगवतः  
+श्रीरङ्ग--वृष-गिरि+++(=तिरुपति)+++--सत्य-व्रत+++(=काञ्च्यां यथोक्तकारि)+++--यदु-गिरि--पृरुषोत्तम+++(=जगन्नाथ)+++-पाण्डुरङ्ग-प्रभृतिषु दिव्याभिव्यक्ति-देशेषु  
+यथाभिमत-यात्रोत्सव-सेवा-हेवाक+++(=काङ्क्षा)+++-विहित-गतागत-  
+चटुल[^9]+++(=चञ्चल)+++-चरण-नलिन-धूली-पटल-पवित्रित-क्ष्मा-तलैः,  
+यद्-ऋच्छया मरुद्-वृधा+++(=कावेरी)+++ऽन्तरीप+++(=द्वीप)+++-मध्य-मध्यासीनैः +++(→श्रीरङ्गे)+++,[^10] शेषशेषाशनगरुडनिर्विशेषैः,  
+अ-शेष-जन-संभावनीयैः, अ-संभवद्-अवद्य+++(=पाप)+++-गन्धैः,  
+अभिजन-विद्या-समुचित-[^11]सदाचार-शील-शालिभिः,  
+अनादि-माया-महावर्त-बम्भ्रम्यमाण-  
+बाह्य[^12]-कथ-करम्भा-वन-मथन-गन्ध-सिन्धुरैः,  
+अधिजिगमिषित-मुक्ति-घण्टा-पथैः,  
+
+
+[[१६]]
 
 [^5]: सकल ------क
 
@@ -406,7 +422,9 @@ X१६
 
 
 अखण्डदिङ्मण्डलशिखण्डकैः, औपनिषदरहस्योपदेशदेशिकैः ',[^13] अवगतसकलकलाकलापैः, [^14] अत्रभवद्भिरार्यमिश्रः । यदुत-  
-X१७
+
+
+[[१७]]
 
 [^13]: “एतद्वै महोपनिषदं देवानां गुह्यम्” इत्युक्तप्रपदनतत्त्वोपदेशदेशिकैरिति साम्प्रदायिकोऽस्यार्थः।
 
@@ -433,7 +451,9 @@ X१७
 सूत्रधारः - आदिष्टोऽस्मि निखिलसुरासुरकोटीरकोटिमणिकिरण[^5][^6] 'निकरनीराजितपादपीठस्य[^7] शरणागतपरित्राणसप्ततन्तुदीक्षितस्य सरसी-  
 रुहवासिनीसहचरितधर्मणः संसरणदवदहनतापनिर्वापण 'महाबलाहकस्य[^8] सर्वेश्वरस्य भगवतः श्रीरङ्गवृषगिरिसत्यव्रतयदुगिरिपृरुषोत्तमपाण्डुरङ्गप्रभृतिषु दिव्याभिव्यक्तिदेशेषु यथाभिमतयात्रोत्सव सेवाहेवाकविहितगतागतचटुल'[^9] चरणनलिन धूलीपटलपवित्रितक्ष्मातलैः, यदृच्छया मरुद्वृधान्तरीपमध्यमध्यासीनैः,[^10] शेषशेषाशनगरुडनिर्विशेषैः,  
 अशेषजनसंभावनीयैः, असंभवदवद्यगन्धैः, अभिजनविद्या 'समुचित-[^11] सदाचारशीलशालिभिः, अनादिमायामहावर्तबम्भ्रम्यमाणबाह्य'[^12] कथकरम्भावनमथनगन्धसिन्धुरैः, अधिजिगमिषितमुक्तिघण्टापथैः,  
-X१६
+
+
+[[१६]]
 
 [^5]: सकल ------क
 
@@ -460,7 +480,9 @@ X१६
 
 
 अखण्डदिङ्मण्डलशिखण्डकैः, औपनिषदरहस्योपदेशदेशिकैः ',[^13] अवगतसकलकलाकलापैः, [^14] अत्रभवद्भिरार्यमिश्रः । यदुत-  
-X१७
+
+
+[[१७]]
 
 [^13]: “एतद्वै महोपनिषदं देवानां गुह्यम्” इत्युक्तप्रपदनतत्त्वोपदेशदेशिकैरिति साम्प्रदायिकोऽस्यार्थः।
 
@@ -493,28 +515,30 @@ X१७
 
 
 
-मानार्थ एव साधुर्भवति । प्रथमं भगवतः सर्वनियन्तृत्वमाह - निखिलेति । कोटीरं किरीटम्, तस्य कोटयोऽग्राणि तत्रस्था मणयः नीलरत्नादयः । नीरा- **जितम्** ; मङ्गलारात्रिकविषयीकृतम् । संश्रितरक्षणैकस्वभावतामाह — शरणागतेति । परित्राणमेव सप्ततन्तुर्मखः, तत्र दीक्षितस्य दीक्षां **प्रविष्टस्य** ; दीक्षाशब्देन संश्रितासंरक्षणसंरक्षणयोहनिवृद्धी भगवत एवेति सूच्यते । दीक्षावैकल्यसाकल्यफलभाक्त्वं यजमानस्यैव । शरणागतपरित्राणं च लक्ष्मीविशिष्टस्यैवेत्याहसरसीरुहेति । सरसीरुहवासिन्या सह चरितो धर्मः संश्रितरक्षणाख्यो येन सः । " धर्मादनिच् केवलात् ” इत्यनिच् । सह सार्धं चरितधर्मेति "सुप्सुपा" इति समासः । श्रियः पत्युरेव मोक्षप्रदत्वमाह - संसरणेति । **निर्वापणम्** ; उपशमनम्,
+मानार्थ एव साधुर्भवति । प्रथमं भगवतः सर्वनियन्तृत्वमाह - निखिलेति । कोटीरं किरीटम्, तस्य कोटयोऽग्राणि तत्रस्था मणयः नीलरत्नादयः । नीरा- **जितम्** ; मङ्गलारात्रिकविषयीकृतम् । संश्रितरक्षणैकस्वभावतामाह — शरणागतेति । परित्राणमेव **सप्ततन्तुर्** मखः, तत्र दीक्षितस्य दीक्षां **प्रविष्टस्य** ; दीक्षाशब्देन संश्रितासंरक्षणसंरक्षणयोहनिवृद्धी भगवत एवेति सूच्यते । दीक्षावैकल्यसाकल्यफलभाक्त्वं यजमानस्यैव । शरणागतपरित्राणं च लक्ष्मीविशिष्टस्यैवेत्याहसरसीरुहेति । सरसीरुहवासिन्या सह चरितो धर्मः संश्रितरक्षणाख्यो येन सः । " धर्मादनिच् केवलात् ” इत्यनिच् । सह सार्धं चरितधर्मेति "सुप्सुपा" इति समासः । श्रियः पत्युरेव मोक्षप्रदत्वमाह - संसरणेति ।
 
 चदुल omitted. मध्य omitted—क.
 
 महा omitted.  
-मोक्षप्रदानमित्यर्थः । उभयविभूतिमत्त्वमाह - सर्वेश्वरस्येति । निखिलहेय प्रत्यनीककल्याणैकतानत्वमाह – भगवत इति । भग इत्यंशेन कल्याणास्पदत्वं वदित्यंशेन निखिलहेयप्रत्यनीकत्वं चोच्यत इति विवेकः । स्वयंव्यक्तस्थानान्युद्दिशति - श्रीरङ्गेत्यादि । सर्वदिव्यक्षेत्राणामादिमतया निरतिशयवैभवतया च श्रीरङ्गक्षेत्रस्य प्रथममुद्देशः । अनन्तरं वृषगिरीति श्रीयादवाद्रिवेङ्कटाद्रयोस्तन्त्रेणोद्देशः । तदनु सत्यव्रतक्षेत्रस्य हस्तिगिर्यपराभिधानस्य । तदनु यदुगिरे - दक्षिणबदरिकाश्रमापरनामधेयस्य । पुरुषोत्तमं नाम जगन्नाथस्थानम् । पाण्डुरङ्गं विजयपुरपश्चिमभागे भीमरथीतीरे विट्ठलेश्वरस्थानं यत्र कृष्णो निवसति । प्रभृतिशब्देन कुम्भकोणादयः संगृहीताः । दिव्याश्च ते अभिव्यक्तिदेशाः अर्चावतारस्थानानि तेषु । यथेष्टं भगवद्यात्रा **एवोत्सवाः** ; यात्राश्चोत्सवाश्चेति **वा** ;
+
+**निर्वापणम्** ; उपशमनम्, मोक्षप्रदानमित्यर्थः । उभयविभूतिमत्त्वमाह - सर्वेश्वरस्येति । निखिलहेय प्रत्यनीककल्याणैकतानत्वमाह – भगवत इति । भग इत्यंशेन कल्याणास्पदत्वं वदित्यंशेन निखिलहेयप्रत्यनीकत्वं चोच्यत इति विवेकः । स्वयंव्यक्तस्थानान्युद्दिशति - श्रीरङ्गेत्यादि ।  
+सर्वदिव्यक्षेत्राणाम् आदिमतया निरतिशयवैभवतया च श्रीरङ्गक्षेत्रस्य प्रथममुद्देशः । अनन्तरं **वृषगिरीति** श्रीयादवाद्रि-वेङ्कटाद्रयोस् तन्त्रेणोद्देशः । तदनु **सत्यव्रत**-क्षेत्रस्य हस्तिगिर्यपराभिधानस्य । तदनु यदुगिरेर् - दक्षिणबदरिकाश्रमापरनामधेयस्य ।  
+**पुरुषोत्तमं** नाम जगन्नाथस्थानम् ।  
+**पाण्डुरङ्गं** विजयपुरपश्चिमभागे भीमरथीतीरे विट्ठलेश्वरस्थानं यत्र कृष्णो निवसति ।  
+प्रभृतिशब्देन कुम्भकोणादयः संगृहीताः । दिव्याश्च ते अभिव्यक्तिदेशाः अर्चावतारस्थानानि तेषु । यथेष्टं भगवद्यात्रा **एवोत्सवाः** ; यात्राश्चोत्सवाश्चेति **वा** ;
 
 \# कुदृष्टि added before, घ,
 
 \* विद्या omitted.  
 ,
 
-तत्र हेवाकोऽभिलाषः, तेन विहितं गतागतम्, तेन चटुलं चञ्चलं यच्चरणनलिनम् तस्य धूलीपटलैः समूहैः पवित्रितं **संजातपवित्रम्** ; यद्वा पवित्रं क्रियत इति **पवित्रितम्** ; " तत्करोति" इति ण्यन्तानिष्ठा । यह- **च्छया** ; दैववशतः । **मरुद्वृधा** ; **कावेरी** ; तस्या अन्तरीपं **मध्यदेशः** ; श्रीरङ्गक्षेत्रमित्यर्थः । अनेनार्यमिश्राणामनवरतभगवत्सेवापरत्वं व्यज्यते । अथात्रैवैषा मुक्तवत्संसारवैमुख्यमाह शेषेति । शेषोऽनन्तः । भगवच्छेषमेवाशनं यस्य स शेषाशनः विष्वक्सेनः सेनाधिनाथः । सदा भगवदङ्गसुखानुभवरूपातिशयात् शेषस्य प्रथममुद्देशः । समस्तभरनिर्वहणात् गरुडात्पूर्वं विष्वक्सेनस्योद्देशः । इतरवैमुख्यपूर्व भगवदनुभव परत्वे निर्विशेषैः । **अशेषजनाः** ; कर्मज्ञानादिनिष्ठाः । यद्वा देवर्षिप्रमुखाः । हेयगुणराहित्यमाह - असंभवदिति । भगवन्मुक्तवदविद्य **मानदोषगन्धैः** ; गन्धशब्दो वासनापरः । वैदिकधर्मनिष्ठामाह - अभिजनेति । अभिजनः कुलं, विद्या **वेदान्ताधिगमः** ; तयोः समुचितो यः सदाचारः, तथा शीलं स्वभावः तच्छालिनः । दुर्वादिनिरसनमाह - अनादीति । अनादिर्या माया सैव महाजलभ्रमः । **बाह्यकथकाः** ; बाह्यकुदृष्टयः । गन्ध- **सिन्धुराः** ; मत्तगजाः । मोक्षे त्वरामाह – अधीति । अधिजिगमिषितः प्राप्तु-
+तत्र **हेवाको** ऽभिलाषः, तेन विहितं गतागतम्, तेन **चटुलं** चञ्चलं यच्चरणनलिनम् तस्य धूलीपटलैः समूहैः पवित्रितं **संजातपवित्रम्** ; यद्वा पवित्रं क्रियत इति **पवित्रितम्** ; " तत्करोति" इति ण्यन्तानिष्ठा । यह- **च्छया** ; दैववशतः । **मरुद्वृधा** ; **कावेरी** ; तस्या **अन्तरीपं** मध्यदेशः ; श्रीरङ्गक्षेत्रमित्यर्थः । अनेनार्यमिश्राणामनवरतभगवत्सेवापरत्वं व्यज्यते । अथात्रैवैषा मुक्तवत्संसारवैमुख्यमाह शेषेति । शेषोऽनन्तः । भगवच्छेषमेवाशनं यस्य स शेषाशनः विष्वक्सेनः सेनाधिनाथः । सदा भगवदङ्गसुखानुभवरूपातिशयात् शेषस्य प्रथममुद्देशः । समस्तभरनिर्वहणात् गरुडात्पूर्वं विष्वक्सेनस्योद्देशः । इतरवैमुख्यपूर्व भगवदनुभव परत्वे निर्विशेषैः । **अशेषजनाः** ; कर्मज्ञानादिनिष्ठाः । यद्वा देवर्षिप्रमुखाः । हेयगुणराहित्यमाह - असंभवदिति । भगवन्मुक्तवदविद्य **मानदोषगन्धैः** ; गन्धशब्दो वासनापरः । वैदिकधर्मनिष्ठामाह - अभिजनेति । अभिजनः कुलं, विद्या **वेदान्ताधिगमः** ; तयोः समुचितो यः सदाचारः, तथा शीलं स्वभावः तच्छालिनः । दुर्वादिनिरसनमाह - अनादीति । अनादिर्या माया सैव महाजलभ्रमः । **बाह्यकथकाः** ; बाह्यकुदृष्टयः । गन्ध- **सिन्धुराः** ; मत्तगजाः । मोक्षे त्वरामाह – अधीति । 
 
-1
-
-" एतद्वै महोपनिषदं देवानां गुह्यम्" इत्युक्तप्रपदन तत्त्वोपदेशदेशिकैरिति सांप्रदायिकोsस्यार्थः ।
+1 " एतद्वै महोपनिषदं देवानां गुह्यम्" इत्युक्तप्रपदन तत्त्वोपदेशदेशिकैरिति सांप्रदायिकोsस्यार्थः ।
 
 ' अनवरतपरिचितगान्धर्वविद्याप्रसादितपरमपृरुषैः added before-- क, ख.
 
-
-मिष्टः मुक्तेर्घण्टापथः अर्चिरादिमार्गः यैः । भूमण्डलभूषणत्वमाह – अखण्डेति । अखण्डं दिमण्डलं भूवलयं तस्य शिखण्डकैः **काकपक्षस्थानीयैः** ; काकपक्षाभावे मुण्डितं शिगे यथा न शोभते तद्वदेषामभावे भूमण्डलमपीति भावः । वेदान्तसंप्रदायप्रवर्तकत्वमाह-- औपनिषदेति । उपनिषत्संबन्धि औपनिषदम् रहस्यं तात्पर्यार्थः, तदुपदेशेन देशिकत्वं प्राप्तैः । वेदान्तव्यतिरिक्तसकलशास्त्रहृदयवेदित्वमाह अवगतेति । सकलशब्देन शब्दतर्कमीमांसाकाव्यनाटकालंकारादि गृह्यते । **कलापः** ; समूहः । अत्रभवद्भिरित्येकं पदं पूज्यवाचि । किमादिष्टमित्यत्राह - यदुतेति । सतामुपचिन्विति यत् तदादिष्टमित्यन्वयः । यच्छन्दोक्तं दर्शयति-ललितेति । यस्मिन्नाट्ये ललितमनसा कोमल-
+अधिजिगमिषितः प्राप्तुमिष्टः मुक्तेर्घण्टापथः अर्चिरादिमार्गः यैः । भूमण्डलभूषणत्वमाह – अखण्डेति । अखण्डं दिमण्डलं भूवलयं तस्य शिखण्डकैः **काकपक्षस्थानीयैः** ; काकपक्षाभावे मुण्डितं शिगे यथा न शोभते तद्वदेषामभावे भूमण्डलमपीति भावः । वेदान्तसंप्रदायप्रवर्तकत्वमाह-- औपनिषदेति । उपनिषत्संबन्धि औपनिषदम् रहस्यं तात्पर्यार्थः, तदुपदेशेन देशिकत्वं प्राप्तैः । वेदान्तव्यतिरिक्तसकलशास्त्रहृदयवेदित्वमाह अवगतेति । सकलशब्देन शब्दतर्कमीमांसाकाव्यनाटकालंकारादि गृह्यते । **कलापः** ; समूहः । अत्रभवद्भिरित्येकं पदं पूज्यवाचि । किमादिष्टमित्यत्राह - यदुतेति । सतामुपचिन्विति यत् तदादिष्टमित्यन्वयः । यच्छन्दोक्तं दर्शयति-ललितेति । यस्मिन्नाट्ये ललितमनसा कोमल-
 
 1 छिदा नृगुणी - ख. ग. ड.
 
@@ -588,7 +612,9 @@ X१७
 [^18]: सर्वे added before----ग
 
 
-तथा हि-- X१९
+तथा हि-- 
+
+[[१९]]
 
 अवधारितनाट्यदेशिमागैंरसमीचीनपराङ्मुखैरमीभिः ।
 
@@ -611,7 +637,9 @@ X१७
 [^18]: सर्वे added before----ग
 
 
-तथा हि-- X१९
+तथा हि-- 
+
+[[१९]]
 
 अवधारितनाट्यदेशिमागैंरसमीचीनपराङ्मुखैरमीभिः ।
 
@@ -685,7 +713,9 @@ X१७
 भूमिकापरिग्रहेऽप्यतिरस्कृतपारम्याम्
 
 अनवबोधजलधिकुक्षिंभरीम्,[^20] अनन्यभक्त्युन्मीलनीम्,[^21] आदिमां देवतामभिगच्छामि[^22]  
-X२२
+
+
+[[२२]]
 
 [^20]: अबोध---क,ख
 
@@ -712,7 +742,9 @@ X२२
 भूमिकापरिग्रहेऽप्यतिरस्कृतपारम्याम्
 
 अनवबोधजलधिकुक्षिंभरीम्,[^20] अनन्यभक्त्युन्मीलनीम्,[^21] आदिमां देवतामभिगच्छामि[^22]  
-X२२
+
+
+[[२२]]
 
 [^20]: अबोध---क,ख
 
@@ -749,7 +781,9 @@ X२२
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-X२३
+
+
+[[२३]]
 
 ( ' सविनयम्[^23] अञ्जलिं बद्ध्वा)
 
@@ -767,7 +801,9 @@ X२३
 
 <details><summary>मूलम् - ६</summary>
 
-X२३
+
+
+[[२३]]
 
 ( ' सविनयम्[^23] अञ्जलिं बद्ध्वा)
 
@@ -2236,7 +2272,9 @@ i गमनोपलेपनमालाबन्धनदीपारोपण
 
 <details><summary>प्रभावलिः - २८</summary>
 
-X६२
+
+
+[[६२]]
 
 क्षणं तु
 
@@ -2252,7 +2290,9 @@ X६२
 
 भागवतविषये उपासकस्य प्रपन्नस्य च । **समयनियतैः** ; नटपक्षे भरतशास्त्रसंसद्धैः । उपासकविषये प्रपन्नविषये च स्ववर्णाश्रमाद्युचितैः । आदिशब्दासद्धान्तो गृह्यते । सूर्यपक्षे समयशब्दः कालपरः, तत्र नियमः, तं प्राप्तैः । योगः नाट्यप्रयोगः । उपासकपक्षे प्रकृष्टयोगैः । प्रपन्नपक्षे अभिगमनाद्यष्टानैः । **तामसारम्भाः** ; तामसाना नटापशदानामारम्भाः प्रवृत्तयः । उपासकपक्षे तमोमूलानि पापानि तेषां प्रवृत्तयः । प्रपन्नपक्षे तामसानां तमोमूलानामन्याभिगमनादीनां प्रवृत्तयः व्यापाराः । सूर्यपक्षे तमः संबन्धिन आरम्भाः व्यापाराः क्षिप्यन्ते । विवेकपक्षेऽपि सत्पथसीमा साविकमार्गमर्यादामनुल्लङ्घ-
 
-X६४  
+
+
+[[६४]]  
 यतो विदुषो विवेकस्य तत्तदवसरप्रयुक्तः प्रयोगैः कामादीना विजयव्यापारः तामसस्य महामोहादेरारम्भाः संनाहाः निरस्यन्त इति ॥ २८ ॥
 </details>
 
@@ -2267,7 +2307,9 @@ X६४
 पावेशिकी चान्तरा स्यात् परिक्रमणिका तथा । अवस्थितिर्निष्क्रमणी पञ्च स्युः पञ्चसन्धिषु ॥
 
 इति । प्रावेशिकी नाम प्रवेशप्रयोजना । समयेति । **समयनियतैः** ; भरतशास्त्रनियतैः, योगशास्त्र नियतैःः उदयादिकालनियतैः । **प्रयोगैः** ; पात्राभिनयैः, प्रकृष्टध्यानैः, संचारैः । **सत्पथसीमाम्** ; भरतमार्गमर्यादां, योग-  
-X६३
+
+
+[[६३]]
 
 मर्यादां, नक्षत्रमार्गमर्यादां च । " सन्नक्षत्रमुडुर्न ना " इति निघण्टुः ।
 
@@ -2337,7 +2379,9 @@ X६३
 
 
 
-X६५
+
+
+[[६५]]
 
 इति । **दूरदृष्टिः** ; विमृश्यकारी । अत्र अयं जनो विवेकश्चेति द्वे वस्तुनी प्रतिपदद्योतकेन चकारेणैकस्यां प्रभविष्यतिक्रियायां समुच्चीयेते इति समुच्चयालंकारः । " द्रव्यादीनामनेकेषां द्रव्यादौ विनिवेशनम् । समुच्चयः स्यात् " इति लक्षणात् ॥ २९ ॥
 </details>
@@ -2431,7 +2475,9 @@ X६५
 स्वेतिवृत्तसमं वाक्यमथवा यत्र सूत्रिणः । गृहीत्वा प्रविशेत्पात्रं कथोद्धातोद्विधैव सः ॥
 
 इति । - वित्रासित निखिल वैरिजन इति असंबद्ध कथाप्रायः प्रलापो नामामुखाङ्गं निरूपितम् । ‘ कः खलु ' इत्यादिवाक्यस्य सहसोपस्थितत्वात् प्रस्तुतविरोधित्वात् गण्डं नामामुखाङ्गं दर्शितम् । " नासूचितस्य पात्रस्य प्रवेशो निर्गमोऽपि वा " इति वचनात् पात्रप्रवेशं सूचयति -- सूत्रधार इत्या-  
-X६७
+
+
+[[६७]]
 
 दिना । **संप्लवः** ; संपर्क । अपवर्गेति । **प्रधानपुरुषार्थस्य** ; धर्मकामहेतुभूतस्यार्थपुरुषार्थस्य । पश्चिमस्य कामस्य । उभयोर्विशेषणविशेष्यभावे-
 
@@ -2575,7 +2621,9 @@ $
 एभिः सूच्यं सूचयित्वा दृश्यमः प्रदर्शयेत् ॥ "
 
 इति दशरूपकोक्तेष्वङ्काङ्गेषु विष्कम्भमारभते -- ततः प्रविशतीत्यादिना । तल्लक्षणसुक्तं प्रतापरुद्रीये. - " संक्षेपार्थस्तु विष्कम्भः " इति । दरेति ।  
-X७१
+
+
+[[७१]]
 
 दरनमितेत्यन्तः सार उक्तः । मनोज्ञेति ग्रन्थिराहित्यम् । भ्रूलतेत्याजैवम् । तरलहृदयलक्ष्य इति धानुष्ककौशलम् "उत्कर्षः स हि धन्विनां यदिषवः सिध्यन्ति लक्ष्ये चले " इति शाकुन्तलोक्तेः । स्नेहदिग्ध **इति** ; स्नेहः प्रेम । तल्लक्षणं च-
 
@@ -3002,7 +3050,9 @@ adds before this, the stanza
 प्रकारान्तरेण रतिर्भयं शङ्कते -- वह वीति । तह वि--- तथापि । विसमट्ठिरसंठाण -- विषम स्थिर संस्थान । वेरग्गदुग्गप्पडिट्ठिओ - वैराग्यदुर्गप्रतिष्ठितः । वैराग्यदुर्गस्य विषमत्वं शत्रुभिर्दुरारोहत्वम् । स्थिरत्वमक्षोभ्यत्वम् । अप्प - मत्तेहिं- अप्रमत्तैः । समदमप्पमुहेहिं - शमदमप्रमुखैः । अमचेहिं - अमात्यैः । अहिर क्खिओ - अभिरक्षितः । सअं असहाअसूरोस्वयमसहायशूरः । अणवा- असाहसी - अनपायसाहसः । विपक्खो - विपक्षः । किं णामकि नाम । कइआ-  
 कदा । काहित्तित्ति-करिष्यतीति । कलुसिअहिअअह्नि - कलुषितहृदयास्मि । **भीरु** ; भयशीले। **अतिशङ्का** ; असंभावितविषये शङ्का । नूनमित्यादि । विप्र- **लब्धा** ; वञ्चिता । स्वयूथ्यानां स्ववर्याणामस्मत्प्रमुखाना वैभवं न निश्चिनोषि । **जैत्रमुपकरणम्** ; जयशीलं साधनम् । वपुरिति । अप्रतिममिति वपुषो धनुषो वा
 
-X८६  
+
+
+[[८६]]  
 विशेषणम् । दृढेति । सौन्दर्याख्यगुणविशिष्टम् । **गुणः** ; मौर्वी । **दरावनम्रम्** ; ईषदवनतम् । श्रवणावधि यन्त्रं तदेव चित्रपुङ्खो बाणो यस्य । मुष्टिप्राह्यमध्यं मम आदिमं धनुः । इक्षुपुष्पादयस्तदनन्तरभूता इति भावः ॥ ३८ ॥
 </details>
 
@@ -3095,7 +3145,9 @@ X८६
 
 <details><summary>प्रभाविलासः - ४०</summary>
 
-X८७
+
+
+[[८७]]
 
 तिष्ठत्विति । **गुणावमर्शः** ; सौन्दर्यादिगुणवर्णनम् । आदिपदेन भाषणलीलापरिहासकेलिपरिरम्भा उच्यन्ते । दोषानुचिन्तनं “ स्तनौ मांसग्रन्थी " इत्यादिचिन्तैवार्थः प्रयोजनं यस्याः सा ॥ ४० ॥
 </details>
@@ -3244,7 +3296,9 @@ X८७
 
 ।
 
-X९०  
+
+
+[[९०]]  
 **सरोषहासम्** ; शत्रुप्रशंसनाद्रोषस्तत एव च हासो यस्मिंस्तत्तथा । अथ रतिं परिहसति — अतिमुग्धे इत्यादिना । **अतिमुग्धे** ; अतिकोमलमनस्के इति भावः । **मञ्जुभाषिणि** ; तथापि तव वचन मनो हरतीति भावः । गुञ्जदित्यादि । गुञ्जन्तो व्यक्तं शब्दायमाना मधुकरा एव शिञ्जिनी धनुर्ज्या, तस्या संहिताः स्थानं प्रापिता विश्वलक्षाः जगच्छरव्याः बाणा यस्य । नित्यं विजये जागरूकस्य
 
 1.
@@ -3373,7 +3427,9 @@ X९०
 
 मकुटक. ख. छ; मणिमकुट-घ
 
-X९४  
+
+
+[[९४]]  
 ;
 
 अलमिहेति । **इह** ; अस्मिन् जगति । मच्छत्रुविमथनप्रसङ्गे विबुधाद्यैः सुरासुरगन्धर्वाद्यैः कीर्तितैरलम् । आगमवत् ग्राह्या स्वीकार्या वाचो यस्य **तस्य** ; आगमवद् ग्राह्याणि वाचो वचनानि येषा तान् वा । धर्मान् धर्मशास्त्राणि । मुक्तिहेतून मुनीना परिषदि गायत उपदिशतः । तपसि आत्मध्याने नियतवृत्तेः तस्य देवस्य श्रीमतो **नारायणस्य** ; **शान्तिम्** ; विषयाद्विरक्तिम् । **जनितयुवतिरत्नम्** ; **युवतिरत्नम्** ; ऊर्वशी । सृष्टोर्वशीकम् । **ऊरुकाण्डमेव** ; सक्थिदण्डमेव दर्शयति । शान्तिर्यद्यस्ति स्त्रीसृष्टिर्विरुध्येतेति भावः । तत्राप्यूरुतः सृष्टिर्विशेषतो विरुद्धा । मुक्ति हेतून **धर्मान्** ; निवृत्तिधर्मानित्यर्थः ॥ ४५ ॥
@@ -3630,7 +3686,9 @@ added after क, ड, च
 
 <details><summary>प्रभावलिः - ४८</summary>
 
-X९९  
+
+
+[[९९]]  
 तदो सदो - ततस्ततः । परवृत्तान्तं कथयेत्यर्थः । रागादय इति । तमः प्रसूतिरुत्पत्तिस्थानं यस्य तस्य महामोहस्य । संसारचक्रं वर्तयतीति संसारचक्रवर्ती । यद्वा संसारस्य चक्रवर्ती सार्वभौमः । रक्षः कुलं दैत्यानुकूलं यथा भवति तथा तन्यायेन । **साचिव्यम्** ; सचिवत्वं, साहाय्यमिति यावत् । सत्त्वं संभव उत्पत्तिस्थानं यस्य तत् । **विवेककुलमसहायम्** ; कुलान्तरसाचित्र्यरहितम् । अत एवाल्पबलम् । **क्षेत्रज्ञः** ; जीवः । अद्य **यावत्** ; एतद्दिनावधीत्यर्थः । **बहुलम्** ; अधिकम् । **दत्तदृष्टिः** ; दत्ताभिमुख्यः । **नित्यनुशंसाः** ; आश्रितचातुकाः । **जातिवादिनः** ; स्वव्याघातकोत्तरवादिन इव । **पुरुषस्य** ; भोक्तुः । उत्सादयितुं नाशयितुमुद्युञ्जते । अनादिकालमारभ्य भुक्तायां विविधान् दोषान्
 
 रक्षः पिशाचकुल — च.
@@ -3896,7 +3954,9 @@ X९९
 
 "
 
-X१०५
+
+
+[[१०५]]
 
 इति वचनमनुसंधेयम् । **अनुद्घाटनीयः** ; अप्रकटनीयः । **नियतिविपर्यासः** ;  
 दैवप्रातिकूल्यम् । मनोरथेति । मनोरथ एव समर्थाः, न तु कार्यनिर्वाहे । चिन्तितार्थनिर्वहणसमर्थानामिति ध्वनिः ॥ ५१ ॥
@@ -4143,7 +4203,9 @@ X१०५
 <details><summary>प्रभाविलासः - ५४</summary>
 
 अपूर्वमिव निर्देशमिति । **अपूर्वम्** ; गाढपरिरम्भणे स्वयं प्रवृत्तत्वात् । निर्वेशम् सुखानुभवम् । " निर्देशो भृतिभोगयोः " इत्यमरः । जनितेति । **दत्तहारावमर्दे** ; दत्तो हाराणामवमर्दस्टनं स्तनकाठिन्येन स्फोटनं वा यत्र । यद्वा हेति सुखनिर्वेशाभिनयः । तस्य रावः शब्दः । तस्य मर्दों मेलनं यत्र । **अङ्गयोः** ; शरीरयोः । **अन्तरात्मा** ; मनः । युगल **चिन्ताम्** ; 'ममेदं तवेदम्' इति चिन्तां त्यजति । सुखरागातिश-  
-X११३
+
+
+[[११३]]
 
 याविर्भावेन तन्मयत्वापत्त्या बाह्यविषयक ज्ञानाभावेनैक्यज्ञानाभावादेवानिर्वचनीया सुखपरवशतेति भावः । अत्र संभोगशृङ्गारः ।
 
@@ -5135,7 +5197,9 @@ J
 
 जीवे दुःखाकुले विष्णोः कृपा काप्युपजायते ॥  
 इत्यादिष्विति भावः । मिथ इति । ' एनं संसारिणं करोमि ' इति संकल्पो लीलाकार्यः । एनं मोचयामि' इति संकल्पो दयाकार्यः । एवं विरुद्धकार्यकरत्वं विषमवृत्तित्वम् । कलहस्यारोपितत्वं वक्तुं कल्पनेत्युक्तिः । वस्तुतस्तु तयोरन्योन्यानुकूल्यमेव, " आसृष्टि संततानाम् " इति दयायां "स्थेमभङ्गादिलीले " इति लीलायां चेतरेतरकार्यान्वयात् । परिग्रहणकौतुकेति दक्षिणनायकसमाधिः, " तुल्योऽनेकत्र दक्षिणः " इत्यालंकारिकोक्तेः । प्रथितपारवश्य इत्यवसरनिरीक्षणाभिनिवेश उक्तः । प्रभुरिति सत्यवसरे रक्षणस्य निष्प्रत्यूहतोता । **स्वलक्षितसमुद्रमे** ;  
-X१३९
+
+
+[[१३९]]
 
 स्वनिरीक्षितोत्पत्तिके स्वानुमतोत्पत्तिके वा स्वविषयकोत्पत्तिके वा । सुकृतलक्षणे **सुकृतस्वरूपे** ; यादृच्छिकादिक इति यावत् । तदपि स्वल्पमित्याह
 
@@ -5299,7 +5363,9 @@ X१३९
 
 <details><summary>प्रभावलिः - ७०</summary>
 
-X१४३  
+
+
+[[१४३]]  
 यत-
 
 पूर्व व्याजाभावेनालब्धापि मुक्तिरुत्तरत्र व्याजलाभे लभ्यत एवेत्याह-कर्माविद्यादिचक्रे प्रतिपुरुषमिति । **इह** ; संसारे । **प्रतिपुरुषम्** ; पुरुषं पुरुषं प्रति । अनादिर्विचित्रः प्रवाहः परिभ्रमसंततिः यस्य तस्मिन् । **कर्माविद्यादिचक्रे** ; अविद्याकर्मवासनारुचिप्रकृतिसंबन्धरूपे चक्रे । **तत्तत्काले** ; पूर्वोक्ततत्तत्कर्मादिपरिपाकदशावसरे कस्मिश्चिदीश्वरसमधिगम्ये काले । **विविधा** ; अनन्तप्रकारा, भोगमोक्षादिरूपा । **विपक्तिः** ; विपाकः । **सर्वसिद्धान्तसिद्धा** ; चार्वाकव्यतिरिक्तसर्वसिद्धान्तसंमता भवति । तया विपक्त्या लब्धस्वावकाशः प्राप्तस्वक्रियमाणरक्षणयोग्यं स्थानं यस्याः तया, प्रथमगुरुः प्रथमाचार्य ईश्वरः, तस्य कृपया
@@ -5368,7 +5434,9 @@ X१४३
 
 अथ जायमानकालकटाक्षितस्य पुंसः संसारेऽवस्थानप्रकार माहस चेत्यादि । दर्पति । इह चेतनस्य सीता सादृश्यमनन्यार्ह शेषत्वाद्यभिप्रायेण । बद्धस्य लङ्कानिरुद्धसीतासादृश्यमुच्यते । दर्पेण उद्रिक्तानि दशेन्द्रियाण्येव दशाननानि यस्य तेन मनोनक्तंचरेण मनोरूपरावणेनाधिष्ठिते नियमिते संसारसिन्धुना परिगते आवेष्टिते अस्मिन् देहे लङ्कासदृशे, दीनामवस्थां गतः
 
-X१४५  
+
+
+[[१४५]]  
 सन् अद्यत्वे एतस्मिन् काले, हनुमत्समेन हनुमतेव देशिकस्य हनुमत्समत्वं घटकत्वोत्तीर्णभवसागरत्वाद्यभिप्रायम् । प्रकाशितार्थपञ्चकज्ञानः पुमान् । विदेह-
 
 " अथ यदिदमस्मिन् ब्रह्मपुरे ” इति श्रुत्यर्थोऽप्यत्र विवक्षितः । शरीरमपि न स्वकीयमिति भावः .
@@ -5582,7 +5650,9 @@ X१४५
 
 जीवदुः खश्रवणात् सविषादम् । इअं णामेत्यादि । इअं णाम इदं नाम, इत्येवंप्रकारेण । उम्मत्तदसं - उन्मत्तदशम् । पुरिसं पुरुषम् । बुद्धी पिअअमाबुद्धिः प्रियतमा । किं ण बोहेइ - किं न बोधयति । **सूक्ष्मवादिनि** ; सूक्ष्मार्थं पृच्छसीति प्रशंसा । आत्मनोऽवस्थाद्वयमस्ति - स्थावरत्वं जङ्गमत्वं चेति । तत्र स्थावरत्वयोगे मतिरसत्कल्पेव भवति । जङ्गमत्वे स्वरूपतः प्रकाशमानापि निर्विकासा भवति । अतो बुद्धिः पत्युः प्रतिबोधने सर्वदा असमर्थैवेतीममर्थ दृष्टान्तद्वयेन दर्शयति-सापीत्यादिना । **स्वयंप्रबोधापि** ; स्वयप्रकाशापि । **सुप्तप्राया** ; संकुचिता । पत्याविति । भो सुमुखि, बुद्धिः पुरुषे मायायोगात प्रकृतिसंबन्धात् दूरं **गतवति** ; पुरुषस्य दूरगतत्वं स्थावरत्वप्राप्तिः,
 
-X१५०  
+
+
+[[१५०]]  
 मलिनितरुचित्वं जङ्गमत्वप्राप्तिः । दूरगतत्वे सूर्यो दृष्टान्तः । मलिनितरुचित्वे च चन्द्रः । स्वयमपि दूरं गता अभिभूतस्वरूपप्रकाशा । मलिनितरुचौ च सति तुल्यशीलत्वात् स्वयमपि मलिनितरुचिः । अम्बा बुद्धिः **म्लानाकारा** ; संकुचितस्वभावा । **निभृता** ; संकुचितस्वरूपा च वर्तते । तुल्यशीला किमिव ? पत्यौ
 
 रवौ दूरं गतवति पद्मिनीव, तुहिनकिरणे राहुग्रस्ते यामिनीव ॥ ७४ ॥
@@ -5771,7 +5841,9 @@ X१५०
 
 " " वेदे सिद्धः “ आचार्यवान् पुरुषो वेद ” “ वेदमनूच्याचार्यः " इत्यादिषु प्रसिद्धः ।
 
-X१५४  
+
+
+[[१५४]]  
 **नरेन्द्रः** ; नरश्रेष्ठ आचार्यः । यद्वा निगमसिद्धा या आचार्यनिरीक्षा प्रथमकटाक्षेण मदीयोऽमिति स्वीकारः, तया । निपुणानां मुमुक्षूणा मार्गं प्रविष्टो भवति ॥ ७६ ॥
 </details>
 
@@ -5822,7 +5894,9 @@ X१५४
 
 
 
-X१५५  
+
+
+[[१५५]]  
 विविधा गुणाः शमदमादयः मुक्तिसुखानामङ्कुरभूताः । देशिकदृष्टेः सुधाप्लवनारोपाद्गुणानामङ्कुरत्वारोपणम् ॥ ७७ ॥
 </details>
 
@@ -6100,7 +6174,9 @@ X१५५
 
 <details><summary>प्रभाविलासः - ८१</summary>
 
-X२६१
+
+
+[[२६१]]
 
 दुःसहेत्यादि । " तस्य तावदेव चिरं यावन्न विमोक्ष्ये " " अहं त्वा सर्वपापेभ्यो मोक्षयिष्यामि मा शुचः " इत्यादिरागमः । " तत्सामान्यादितरेषु तथात्वम् " इति न्यायः । एवं युक्तिर्नाम मुखसंवेरङ्गमुक्तम्, “बीजानुकूल संघटन प्रयोजनविचारो युक्तिः " इति लक्षणात् । निरपायेति । निर- **पायः** ; निर्दुष्टः । **अधिरोहिणी** ; निश्रेणिः । " निश्रेणिस्त्वधिरोहणी "  
 इत्यमरः । **क्रमशः** ; पूर्वोक्त जायमानकटाक्षादिक्रमेण । परिशुद्धसत्वपरि- **कर्मिते** ; अप्राकृतद्रव्यरचिते, क्षयन्तमस्य रजसः पराके " इति श्रुतेः । समिन्धत इति " तद्विप्रासो विपन्यवो जागृवांसः समिन्धते " इति श्रुतिरनुगृहीता भवति । एवं प्राप्तिर्नाम मुखसंवेरङ्गमुक्तम्, " बीजसुखागमः प्राप्तिः " इति लक्षणात् । कृतिनः समिन्धत इत्यनेकेषामिष्टार्थसिद्धिप्रतीतेः सिद्धिर्नाम नाट्यालंकारो दर्शितः । यदाहामृतानन्दः
@@ -6343,11 +6419,15 @@ I
 
 <details><summary>प्रभावलिः - ८५</summary>
 
-X२६८  
+
+
+[[२६८]]  
 समाश्रितसंरक्षणं तदेकदीक्षितस्य भगवतः कैमुतिकन्यायसिद्धमित्याह- अथवेत्यादि । किमाश्रितविशेषविषयवचनेन ? साधारणश्चायमित्यादि । तदेव दर्शयतिदीन इति । दीनः विभीषणादिवद्भग्नदर्पः । दृप्यतु **वा** ; भार्गवादिवत् उद्धतो भवतु वा । परं **विराध्यतु** ; केवलं काकादिवत् विरोधमाचरतु वा ।  
 ततो **विरोधाद्वधावर्तताम** ; विरोधाद्व्यावर्तनमुदासीनता । सुग्रीवादिवदुदासीनो भवतु । शरणागतेः पूर्वमिति सर्वत्र योज्यम् । **शकनतः** ; शक्तितः । शक्त्यनुसारेणेत्यर्थः । **तथा** ; एवमेव । सद्भिः **स्थाप्यते** ; अनुष्ठानेन स्थिरीक्रियते । शरणागतरक्षकान् सतो दर्शयतिविश्वामित्रेत्यादिना । विश्वामित्रः शुनःशे-
 
-X१७०  
+
+
+[[१७०]]  
 "
 
 फादिविषये । कपोतेन निषादो रक्षितः । राघवेण काकादिः । रघुणा अश्वमेध - तुरङ्गरक्षणे, ब्राह्मणश्च । व्योमाध्वगः देवाः, तेषा प्रेयस्यः देवपत्न्यः, **ताभिस्त्वष्टा** ; "देवा वै त्वष्टारमजिघांसन् । स पत्नीः प्रापद्यत " इत्यादेः ।  
@@ -6369,7 +6449,9 @@ X१७०
 ;  
 ।
 
-X१६९
+
+
+[[१६९]]
 
 ब्रह्मेति चेद्वेद, सन्तमेनं ततो विदुरिति" इति श्रुतेः । यद्वा शरणागतरक्षणधर्मरहस्यविद्भिः । " सूक्ष्मः परमदुर्ज्ञेयः सतां धर्मः लवंगम" इति हि शरण्यवचनम् । **स्थाप्यते** ; स्वयमनुष्ठानेन स्मृतिप्रामाण्येन च स्थिरीक्रियते । सत एवोदाहरतिविश्वामित्रेत्यादिना । स्वब्राह्मण्यनिमित्तसुकृतापत्यादिहानिमनुमत्येममेवान्तरङ्गधर्ममन्वतिष्ठद्विश्वामित्रः । तदुक्तं बालकाण्डे स्वपुत्रान् प्रति विश्वामित्रवचनम्मू-
 
@@ -6405,7 +6487,9 @@ X१६९
 यो हि कंचिद् द्विजं हन्यात् गां च लोकस्य मातरम् ।
 
 शरणागतं च यो हन्यात्तुल्यं तेषां च पातकम् ॥  
-X१७१
+
+
+[[१७१]]
 
 इति । ईश्वरस्य शरण्यत्वं स्वाभाविकमिति वक्तुं राधवश्रवणम् । राघवो हि
 
@@ -6513,7 +6597,9 @@ X१७१
 
 <details><summary>प्रभाविलासः - ८६</summary>
 
-X१७३
+
+
+[[१७३]]
 
 " कारणं तु ध्येयः " " तरति शोकमात्मवित्" इत्यादिना यत्कारणं तदेव ध्येयम् । ध्येयमेव मोक्षप्रदमित्यभिप्रायेण नारायणस्य जगत्कारणत्वं तावदाह – पुरेति । आवेधः **स्तम्बावधि** ; चतुर्मुखमारभ्य स्तम्बपर्यन्तायाः । **पुरुपसृष्टेः** ; जीववर्गम्य । **स्थितिमति** ; स्थितिं कुर्वति । अत्र स्थितिपदेन सृष्टिलयावपि विवक्षितौ । अत्र " यतो वा इमानि भूतानि जायन्ते । येन जातानि जीवन्ति । यत्प्रयन्त्यभिसंविशन्ति । " इति श्रुतिः,
 
@@ -6919,7 +7005,9 @@ f
 
 उत्तरं - एतदुत्तरम् । इदं प्रत्युत्तर वचनम् । अथ “ अनन्तशास्त्रं बहु वेदितव्यम्" इत्युक्तप्रकारेण शास्त्रपाठे अलसानां सर्वागमसारं संगृह्य दर्शयितव्यमिति प्रार्थयते-अज्ज उण इत्यादिना । अज्जरण अद्य पुनः । अणतसाहणणिअमंत निरूवणविलंब - अनन्तसाधननिगमान्तनिरूपणविलम्बम् । अनन्तसाधनानां बहुपरिकराणा निगमान्ताना निरूपणं विचारः, तद्रूपं विलम्बम् । असहंतस्स - असहमानस्य । तुरंत हिअअस्सत्वरमाणहृदयस्य । चेअणस्स- **चेतनस्य** ; चेतनार्थमित्यर्थः । सव्वाअमसारं सर्वागमसारम् । संकलऊणसकलय्य । दंसेदुं दर्शयितुम् । तुमं --- त्वाम् । पत्थेमि-प्रार्थयामि । **तदिदम्** ; सर्वागमसारम् । स्वसंकल्पेति । अत्र “ सर्वे वेदा यत्पदमामनन्ति " इत्याद्य-
 
-X१८४  
+
+
+[[१८४]]  
 ।
 
 नुरोधेन श्रियः पतिरेव वेदान्तवेद्य इत्याह । स्वसंकल्प एव उपन्न आश्रयो यस्याः सा त्रिविधानां चिदचिह्नस्तूनां विततिः संघातो यस्य सः । अनेन
@@ -6977,7 +7065,9 @@ X१८४
 
 पर इति । **परः** ; उत्कृष्टः ।
 
-X१८५
+
+
+[[१८५]]
 
 ब्रह्मविदाप्नोति परम् " " तत्त्वं नारायणः परः " इति श्रुतेः । अस्मिन् परे ब्रह्मणि । **तत्संकल्पः** ; ब्रह्मणः संकल्पः । **चुलकयति** ; प्रसृतिमात्रं **करोति** ; नाशयतीति यावत् । मन्त्ररत्नाख्येन । सकृदनुष्ठितस्यैव पुरुषार्थनिमित्ततया झटितीत्युक्तिः । अत एव विलम्ब कारिमन्त्रान्तरवैलक्षण्यं केनचिदित्युक्तम् । **वेताली** ; पिशाची । **अतिपतति** ; अतिक्रामति ॥ ९३ ॥
 </details>
@@ -7008,7 +7098,9 @@ X१८५
 
 <details><summary>प्रभावलिः - ९४</summary>
 
-X१८६  
+
+
+[[१८६]]  
 **संमितमतीनामपि** ; अबहुश्रुतानामपीत्यर्थः । ननु संप्रहेणैवालमित्या-
 
 । शङ्कय बाह्यकुदृष्टिवचोभिर्मनसः क्षोभानुत्पादाय वेदान्तश्रवणं कर्तव्यमित्याह -- किंत्वित्यादिना । यद्यपि संग्रहो **दर्शितः** ; अथापीत्यर्थः । अथ कुदृष्टीना बाह्यमतानुसरणं दर्शयति-- धृतेति । धृतं यन्निगमाख्यं कवचं तेन निगूढाः प्रच्छन्नाः । अवैदिकत्वप्रच्छादनाय वेदं परिगृह्णन्ति । अथापि तदुक्तं सर्वमपलपन्तीत्यर्थः । **संप्रति** ; कलियुगे । केचित् **कुदृष्टयः** ; शंकरादयः । स्यालोपालम्भतुल्यया **वाचा** ; स्यालः पत्नीसोदरः । तस्योपालम्भः दूषणं यथा सहृदयं न भवति, एवं कुदृष्टीनां **बाह्यदूषणमपि** ; अन्ततस्तन्मतस्वीकारात् । तदूषणरूपया वाचा स्वावैदिकत्वं परिहृत्य तान् सौगतादीन् बाह्यान् **छलयन्ति** ; छद्मना अन्यैरज्ञातं यथा तथा **अनुसरन्ति** ; तदुक्तजगन्मिथ्यात्वादिकमनुकुर्वन्ति । कष्टं तदिति शेषः । यथोक्तं यादवप्रकाशेन--
@@ -7074,7 +7166,9 @@ X१८६
 
 अथ च ; अत एवेत्यर्थः । **विपुलमतिभिः** ; शास्त्रक्षोदसहबुद्धिभिः । **अस्य** ; कुदृष्टिमतस्य । **प्रतिविधिः** ; प्रत्युत्तराणि, दूषणानीत्यर्थः । विस्तरे- **णानुसंधीयते** ; वेदान्तश्रवणं कुर्वन्तीत्यर्थः । अत्र प्रमाणं दर्शयति- इष्टमेवेति । अनेन " इष्टं हि विदुषां लोके समासव्यासधारणम्” इति महाभारतवचनं स्मारित भवति । मन्दमतीना संग्रहो विपुलमतीनामसंग्रहो वेदान्तपरिचयश्च कर्तव्य इत्युक्तं भवति । अतस्तन्मतानुगुण्येनानेकधार्थप्रतिपादनादित्थमिति श्रुत्यर्थो निर्णेतुमशक्य इति चोदयति — सुट्टु भणिअं इत्यादि । सुठु भणिअं अय्यउत्तेण - सुष्ठु भणितमार्यपुत्रेण । एवं वि - एवमपि । तेहिं तेहिं - तैस्तैः । मद्देसिम एहिं — महर्षिमतैः । तक्केहिं वि तारिसेहिं - तर्केरपि तादृशैः । परिज्जता - प्रतार्यमाणाः । णिअनंता - निगमान्ताः ।
 
-X१८८  
+
+
+[[१८८]]  
 .
 
 त्यर्थः । ननु श्रुतिमूलतर्कसनाथकापिलादिस्मृतिविरोधात् श्रुतिरप्रमाणं भवत्वित्यत्राह --- स्वतः प्रमितिसाधनीति । स्वत एव प्रमितिसाधनत्वात् श्रुतेः स्मृत्यविरोधानपेक्षत्वमित्यर्थः । नन्वेवं सति तर्केऽप्यपेक्षाभावात् मीमांसाद्वयस्यानारम्भणीयताप्रसङ्गः । मैवम् । मीमांसाया वेदेतिकर्तव्यतात्वात् तदनुग्रहापेक्षत्वेऽपि न स्वाङ्गं स्वव्यवधायकमिति न्यायेन तदपेक्षत्वस्य न स्वतः प्रामाण्यविरोधः । तदेतदाह - सुदृढतर्कगुप्ता च सेति । सुदृढस्तर्कः **मीमांसा** ; तदपेक्षत्वस्य प्रतिमतभङ्गे विनीयोग इति भावः । एवं मीमासोपबृंहिता सती अप्रतिष्ठितम् अनवस्थितं कुतर्क कोलाहलं **प्रतिरुणद्धि** ; निवर्तयति ॥ ९५ ॥
@@ -7082,7 +7176,9 @@ X१८८
 
 <details><summary>प्रभाविलासः - ९५</summary>
 
-X१८७
+
+
+[[१८७]]
 
 **प्रतिविधिः** ; प्रतीकारः । समासः संग्रहः । **व्यासः** ; विस्तरः । अनेन " इष्टं हि विदुषां लोके समासव्यासधारणम्" इति स्मारितम् । चोराकुष्टेति । चोराहृतधनं स्वामिनं न प्राप्नोतीति तत्सादृश्यमुक्तम् ।  
 अविप्लुतेति । अविप्लुतपरिग्रहाणाम् अविगीतमहाजनपरिग्रहाणां स्मृतीनां मन्वादिस्मृतीनां शतेन । तेन कपिलादिस्मृतीनां महाजनपरिग्रहाभावेन विगीतत्वमुक्तम्, " इतरेषां चानुपलब्धेः " इति सूत्रकारोक्तेः । **एककण्ठी** ; ऐकार्थ्यं प्राप्ता श्रुतिः । **स्वभक्तिविकलस्मृतीः** ; स्वविरुद्धार्थाभिधायिकापिलादिस्मृतीः । **स्वपनतः** ; स्वमतोऽपि । न **प्रेक्षते** ; ऐककण्ठ्यं न प्राप्नोति ननु कापिलादिस्मृतिविरुद्धा श्रुतिरेवानादरणीयेत्यत आह — स्वत इति । प्रभावली
@@ -7090,7 +7186,9 @@ X१८७
 चोराकिट्ठगोधणसरिसा चोराकृष्टगोधनसदृशाः । होंतित्ति -- भवन्तीति । संपण्णसद्धसा -- संपन्नसाध्वसा । मह चिंता - मम चिन्ता । यथोक्तं मनुना - " बिभेत्यल्प श्रुताद्वेदो मामयं प्रतरिष्यति” इति । यथा तस्करापहृतं गोधनं स्वामिनं न प्राप्नोति, एवं तैस्तैर्वादिभिः स्वस्वमतानुगुणमपहृतार्था वेदान्ताः स्वभावसिद्धमर्थ न प्राप्नुवन्तीत्यर्थः । परिहरति- अविप्लुतेति । अविप्लुतः अनुपद्रुतः परिग्रहः विशिष्टपरिग्रहः यासा, ताश्च ताः स्मृतयश्च, तासां शतेनैककण्ठी **एकार्थप्रतिपादिका** ; मन्वादिस्मृतिभिरुपबृंहितेत्यर्थः । **स्वभक्तिविकलाः** ; स्वस्था भक्तिहीनाः,
 
 स्वस्था भक्तिहीनाः, स्वविरुद्धार्थाभिधायिनी रित्यर्थः । **स्मृतीः** ; कापिलादिस्मृतीः । **स्वपनतः** ; स्वप्नेऽपि **नावलोकयति** ; तदनुगुणा न भवतीत्यर्थः । अथापि प्रतिपन्नार्थस्य तद्बाधितत्वेन श्रुतेः प्रामाण्याभावशङ्का स्यादित्यत आह-- स्वत इति । बाधाबाधानपेक्षं श्रुतिः स्वत एव प्रमा साधयती-  
-X१८९
+
+
+[[१८९]]
 
 स्मृतीनां श्रुतिमूलकतया **प्रामाण्यम्** ; श्रुतेस्तु नान्याधीनमिति भावः । वैपरीत्यं किं न स्यादित्यत आह-सुदृढेति । श्रुतेः स्वतः प्रामाण्यमन्येषां तन्मूलकत्वेन प्रामाण्यं च प्रमाणलक्षण एव सोपपत्तिकमभियुक्तनिरूपितमिति भावः । अनेन कापिलादिस्मृतेरनुकूलतर्काभावः प्रतिकूलतर्कपराहतिश्वोक्ता । ननु तत्तन्मतस्यैस्तत्र तत्र तर्का निरूपिता इत्यत आह -- अप्रतिष्ठितेति । ते तर्काभासा इत्यर्थः ॥ ९५ ॥
 </details>
@@ -7136,7 +7234,9 @@ X१८९
 
 अथ विवेकस्याशरीरवचः श्रवणं वर्णयति-मूलच्छेदेत्यादि । मूलच्छेदो भविष्यतीति भयरहितेन, स्वविनाशमविगणयतेत्यर्थः । **दुर्मेधसा** ; दुर्बुद्धिना
 
-X१९०  
+
+
+[[१९०]]  
 कंसेन उग्रसेन इव प्रभुः जीवात्मा कारागृहे संसारे स्थापितः । अन्यत्रार्थः स्पष्टः । **विख्यातेन** ; वेदान्तप्रसिद्धेन । विश्वोपकारमर्थितुं शीलवता कृष्णेन वसुदेवसुतेनेव । **बलोत्तरेण** ; **बलवता** ; अन्यत्र बलः बलरामः उत्तरो ज्येष्ठो यस्य तेन । **घृणिना** ; कृपालुना । मुक्तानां श्रियं मोक्षसंपदम् । अन्यत्र कारागृहान्मुक्तः श्रियं राज्यलक्ष्मीम् । अत्र पक्षे मुक्तः श्रियमिति पदद्वयम् ॥ ९६ ॥
 </details>
 
@@ -7208,13 +7308,17 @@ X१९०
 
 1
 
-X१९२  
+
+
+[[१९२]]  
 **वृक्षम्** ; परपक्षप्रतिक्षेपे यो यज्ञः उद्योगः, स एव संतानवृक्षः कल्पतरुः, तम् । पूर्वाचार्यबहुमतिविषयमस्मदुद्योगमित्यर्थः । **संप्लावयिष्यन्** ; आप्लावयिष्यन् सेचयिष्यन् । साधु सफलयितुं सफलीकर्तु निर्वाहयितुमित्यर्थः । **अधीष्टे** ; शक्नोति । यथा कश्चित् जलबिन्दुः वाहिनीसंवर्धितः संयमिजनाभिमतं कंचन वृक्षमाप्लावयन् सफलयति, तद्वत् ॥ ९७ ॥
 </details>
 
 <details><summary>प्रभाविलासः - ९७</summary>
 
-X१९१
+
+
+[[१९१]]
 
 रिपुगणेति । रिपवः बाह्यशत्रवः, तेषां गणस्य विजिगीषैव, बिन्दुलेशः कर्ता । मधुजितः भगवतः अनुजिघृक्षा अनुग्रहेच्छेव वाहिनी नदी, तया वर्षितात्मा सन् । यतेर्भाष्यकारस्य गणस्य शीर्षसंबन्धियामुनप्रभृतिसमूहस्य पादसंबन्धिचतुःसप्ततिमुख्यगणस्य च बहुमान्यं बहुमानार्हम् । यत्नः पुरुषमोचनोद्योगः, स एव संतानवृक्षः कल्पतरुः । तं **सफलयितुमधीष्टे** ; समर्थो भवति । अस्मदिच्छा लेशमात्रेणेश्वर एवाभिमतं सफलयतीत्यर्थः । अत्र रिपुगण विजिगीषारूपः " अवान्तरार्थ " इत्यादि वक्ष्यमाणलक्षणो बिन्दुर्भगवत्कृपैधितो भूत्वा प्रयत्नस्तु " इत्याद्युक्तरूप-  
 यत्नं सफलयितुं बिन्दुयत्नसमन्वयरूपे द्वितीयेऽङ्के प्रतिमुखसंधिना निर्वर्तयितुमधीष्ट इत्युत्तराङ्कनिधीयमानाङ्गप्रकारश्च निर्दिष्टो भवति । अत्र करणं नाम मुखसंधेरङ्गमपि प्रदर्शितम् । "बीजानुगुणप्रस्तुतकार्यारम्भः करणम्” इति
@@ -7287,7 +7391,9 @@ X१९१
 <details><summary>प्रभाविलासः - ९८</summary>
 
 **घटा** ; समूहः । " करिणां घटना घटा" इत्यमरः । **कदा** ;  
-X१९३
+
+
+[[१९३]]
 
 मोहविजयानन्तरभावित्वान्नेदानीं प्रस्तुतेत्यर्थः । अत्र निर्णयात्मक ऊहो " ऊहो वितर्कः स द्वेधा निर्णया निर्णयात्मकः " इति
 
