--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -177,7 +177,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 <details><summary>प्रभावलिः - १</summary>
 
-इह खलु वेदान्ताचार्यः सर्व-जगत्-प्रसिद्धः कवि-तार्किक-सिंहा  परगुण-नामधेयः+++(=??)+++ वेंकटेश गुरु-सार्वभौमः  
+इह खलु वेदान्ताचार्यः सर्व-जगत्-प्रसिद्धः कवि-तार्किक-सिंह+अपरगुण-नामधेयः वेंकटेश गुरु-सार्वभौमः  
 संसार-दव-दहन-दन्दह्यमानं सकलं जनं विलोक्य करुणया दोदूयमान-चेतास्  
 त्रय्यन्त-सुधारस-परिवाहे नाप्लावयिष्यन्  
 आलस्याद्युपहत-मनस्कान् कोमल-बुद्धीन् अप्य् अनुजिघृक्षुः  
@@ -302,7 +302,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 लक्ष्ये यत्र श्रुति-मित-गुणाकृष्टि-लब्धावधानैः  
 प्रत्यग्-बाणः प्रणव-धनुषा सत्त्व-वद्भिः प्रयुक्तः ।  
-मध्ये-वक्षः **स्फुरति** महसा +++(गरुडगत्या)+++ पत्र-लः +++(जीवाधिदैवत-)+++कौस्तुभात्मा  
+मध्ये-वक्षः **स्फुरति** महसा +++(ऽपि गरुडगत्या ऽपि बाणत्वेनापि)+++ पत्र-लः +++(जीवाधिदैवत-)+++कौस्तुभात्मा  
 पद्मा-कान्तः स **भवतु** दया-दुग्ध-सिन्धुः श्रियै वः[^4] ॥ २ ॥+++(5)+++
 
 [^4]: नः: ---क,ग,छ
@@ -376,7 +376,9 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 (नान्द्यन्ते)
 
-सूत्रधारः - आदिष्टो ऽस्मि  
+सूत्रधारः - 
+
+आदिष्टो ऽस्मि  
 निखिल-सुरासुर-  
 कोटीर+++(=किरीट)+++-कोटि-मणि-किरण[^5][^6]-निकर-  
 नीराजित-पाद-पीठस्य[^7]  
@@ -421,7 +423,10 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 [^12]: कुदृष्टि added before
 
 
-अखण्डदिङ्मण्डलशिखण्डकैः, औपनिषदरहस्योपदेशदेशिकैः ',[^13] अवगतसकलकलाकलापैः, [^14] अत्रभवद्भिरार्यमिश्रः । यदुत-  
+अखण्ड-दिङ्-मण्डल-शिखण्डकैः,  
+औपनिषद-रहस्योपदेश-देशिकैः,[^13]  
+अवगत-सकल-कला-कलापैः, [^14]  
+अत्रभवद्भिर् आर्य-मिश्रैः। यद् उत -  
 
 
 [[१७]]
@@ -432,16 +437,13 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 [^14]: अनवरतपरिचितगान्धर्वविद्याप्रसादितपरमपुरुषैः added before ---क,ख
 
 
-ललितमनसां प्रीत्यै बिभ्रद्रसान्तर भूमिका-
-
-मनवमगुणो यस्मिन्नाटये रसो नवमः स्थितः ।
-
-जननपदवीजङ्घालार्तिच्छिदानुगुणीभव-[^15]
+ललित-मनसां प्रीत्यै बिभ्रद्--रसान्तर-भूमिकाम्  
+अन्-अवम-गुणो यस्मिन् नाटये,, +++(शान्ताखः)+++ रसो नवमः स्थितः ।
+जनन-पदवी-जङ्घाल+++(=धावक)++++आलार्ति--च्छिदानुगुणीभवन्[^15]  
+नट-परिषदा तेनास्वादं सताम् उपचिन्व् इति ॥ ३ ॥
 
 [^15]: नृगुणी---ख,ग,ड
 
-
-न्नटपरिषदा तेनास्वादं सतामुपचिन्विति ॥ ३ ॥
 </details>
 
 <details><summary>मूलम् - ३</summary>
@@ -479,7 +481,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 [^12]: कुदृष्टि added before
 
 
-अखण्डदिङ्मण्डलशिखण्डकैः, औपनिषदरहस्योपदेशदेशिकैः ',[^13] अवगतसकलकलाकलापैः, [^14] अत्रभवद्भिरार्यमिश्रः । यदुत-  
+अखण्डदिङ्मण्डलशिखण्डकैः, औपनिषदरहस्योपदेशदेशिकैः ',[^13] अवगतसकलकलाकलापैः, [^14] अत्रभवद्भिरार्यमिश्रैः । यदुत-  
 
 
 [[१७]]
@@ -532,7 +534,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 \* विद्या omitted.  
 ,
 
-तत्र **हेवाको** ऽभिलाषः, तेन विहितं गतागतम्, तेन **चटुलं** चञ्चलं यच्चरणनलिनम् तस्य धूलीपटलैः समूहैः पवित्रितं **संजातपवित्रम्** ; यद्वा पवित्रं क्रियत इति **पवित्रितम्** ; " तत्करोति" इति ण्यन्तानिष्ठा । यह- **च्छया** ; दैववशतः । **मरुद्वृधा** ; **कावेरी** ; तस्या **अन्तरीपं** मध्यदेशः ; श्रीरङ्गक्षेत्रमित्यर्थः । अनेनार्यमिश्राणामनवरतभगवत्सेवापरत्वं व्यज्यते । अथात्रैवैषा मुक्तवत्संसारवैमुख्यमाह शेषेति । शेषोऽनन्तः । भगवच्छेषमेवाशनं यस्य स शेषाशनः विष्वक्सेनः सेनाधिनाथः । सदा भगवदङ्गसुखानुभवरूपातिशयात् शेषस्य प्रथममुद्देशः । समस्तभरनिर्वहणात् गरुडात्पूर्वं विष्वक्सेनस्योद्देशः । इतरवैमुख्यपूर्व भगवदनुभव परत्वे निर्विशेषैः । **अशेषजनाः** ; कर्मज्ञानादिनिष्ठाः । यद्वा देवर्षिप्रमुखाः । हेयगुणराहित्यमाह - असंभवदिति । भगवन्मुक्तवदविद्य **मानदोषगन्धैः** ; गन्धशब्दो वासनापरः । वैदिकधर्मनिष्ठामाह - अभिजनेति । अभिजनः कुलं, विद्या **वेदान्ताधिगमः** ; तयोः समुचितो यः सदाचारः, तथा शीलं स्वभावः तच्छालिनः । दुर्वादिनिरसनमाह - अनादीति । अनादिर्या माया सैव महाजलभ्रमः । **बाह्यकथकाः** ; बाह्यकुदृष्टयः । गन्ध- **सिन्धुराः** ; मत्तगजाः । मोक्षे त्वरामाह – अधीति । 
+तत्र **हेवाको** ऽभिलाषः, तेन विहितं गतागतम्, तेन **चटुलं** चञ्चलं यच्चरणनलिनम् तस्य धूलीपटलैः समूहैः पवित्रितं **संजातपवित्रम्** ; यद्वा पवित्रं क्रियत इति **पवित्रितम्** ; " तत्करोति" इति ण्यन्तानिष्ठा । यह- **च्छया** ; दैववशतः । **मरुद्वृधा** ; **कावेरी** ; तस्या **अन्तरीपं** मध्यदेशः ; श्रीरङ्गक्षेत्रमित्यर्थः । अनेनार्यमिश्राणाम् अनवरत-भगवत्-सेवापरत्वं व्यज्यते । अथात्रैवैषा मुक्तवत्संसारवैमुख्यमाह शेषेति । शेषोऽनन्तः । भगवच्छेषमेवाशनं यस्य स शेषाशनः विष्वक्सेनः सेनाधिनाथः । सदा भगवदङ्गसुखानुभवरूपातिशयात् शेषस्य प्रथममुद्देशः । समस्तभरनिर्वहणात् गरुडात्पूर्वं विष्वक्सेनस्योद्देशः । इतरवैमुख्यपूर्व भगवदनुभव परत्वे निर्विशेषैः । **अशेषजनाः** ; कर्मज्ञानादिनिष्ठाः । यद्वा देवर्षिप्रमुखाः । हेयगुणराहित्यमाह - असंभवदिति । भगवन्मुक्तवदविद्य **मानदोषगन्धैः** ; गन्धशब्दो वासनापरः । वैदिकधर्मनिष्ठामाह - अभिजनेति । अभिजनः कुलं, विद्या **वेदान्ताधिगमः** ; तयोः समुचितो यः सदाचारः, तथा शीलं स्वभावः तच्छालिनः । दुर्वादिनिरसनमाह - अनादीति । अनादिर्या माया सैव महाजलभ्रमः । **बाह्यकथकाः** ; बाह्यकुदृष्टयः । गन्ध- **सिन्धुराः** ; मत्तगजाः । मोक्षे त्वरामाह – अधीति । 
 
 1 " एतद्वै महोपनिषदं देवानां गुह्यम्" इत्युक्तप्रपदन तत्त्वोपदेशदेशिकैरिति सांप्रदायिकोsस्यार्थः ।
 
@@ -653,7 +655,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 }
 
-आर्यमिश्रैरादिष्टेन त्वया किं कृतमित्यत्राह --- परिगृहीता च मयेति । परिग्रहणे हेतूनुपन्यस्यति - भरतेत्यादिना । भरतशास्त्रोपाध्यायस्य गुरोः
+आर्यमिश्रैर् आदिष्टेन त्वया किं कृतमित्यत्राह --- परिगृहीता च मयेति । परिग्रहणे हेतूनुपन्यस्यति - भरतेत्यादिना । भरतशास्त्रोपाध्यायस्य गुरोः
 
 1 परिगृहीता,
 
